# 3dprint

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: ARCHITECTURE.md  CODEX_RULES.md  DATABASE.md  IMPLEMENTATION_PHASES.md  MVP_READINESS.md  NATIVE_READINESS.md  PERFORMANCE.md  ROADMAP.md  SCAFFOLD_REVIEW.md  UI_UX.md
docs/stitch/: DESIGN.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/database/: migrations.rs  mod.rs  workflows.rs
src/app/: App.tsx  main.tsx
src/app/layout/: AppShell.tsx  Sidebar.tsx
src/app/navigation/: navigationItems.ts
src/app/providers/: AppProviders.tsx
src/app/routes/: routeConfig.test.ts  routeConfig.ts  useHashRoute.ts
src/app/theme/: ThemeProvider.tsx  index.ts  themeSettings.test.ts  themeSettings.ts
src/components/feedback/: PageLoading.tsx  README.md  Toast.tsx
src/components/forms/: README.md
src/components/layout/: FeatureScaffold.tsx  Page.tsx  README.md
src/components/ui/: Badge.tsx  DataTable.tsx  LoadingSpinner.tsx  MetricPanel.tsx  Panel.tsx  ProductDesignCombobox.tsx  ProgressBar.tsx  README.md  SearchField.tsx  SegmentedFilter.tsx  Swatch.tsx  ToolbarButton.tsx  index.ts
src/data/db/: nativeWorkflows.ts
src/data/repositories/: README.md  addOnsRepository.test.ts  addOnsRepository.ts  expensesRepository.test.ts  expensesRepository.ts  filamentProfilesRepository.ts  (+18 more)
src/styles/: global.css
src/test/: README.md
src/types/: culori.d.ts
src/utils/: README.md
(+128 files in other folders)
