[package]
name = "print-business-manager"
version = "0.1.0"
description = "Personal offline 3D print business manager"
authors = ["Noel"]
edition = "2021"
license = "UNLICENSED"

[lib]
name = "print_business_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.4", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"

[dev-dependencies]
tempfile = "3"
